--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest --watchAll --coverage --silent"
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "@types/jest": "^28.1.5",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
@@ -26,10 +28,28 @@
     "react-native-webview": "^11.22.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/jest-native": "^4.0.5",
+    "@testing-library/react-native": "^10.1.1",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
+    "babel-jest": "^28.1.3",
+    "jest": "^26.6.3",
+    "jest-expo": "^45.0.1",
+    "ts-jest": "^28.0.6",
     "typescript": "~4.3.5"
   },
-  "private": true
+  "private": true,
+
+  "jest": {
+    "preset": "jest-expo",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!@react-native|react-native)"
+    ]
+  }
 }
